--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -6,6 +6,7 @@ html{
     flex-direction: column;
     width: 60%;
     margin: auto;
+    background: white;
 }
 
 @media only screen and (max-width: 1024px) {
