--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -6,7 +6,10 @@ html{
     flex-direction: column;
     width: 60%;
     margin: auto;
+    padding: 5px;
+    border-radius: 5px;
     background: white;
+    box-shadow: 0 0 5px 0 rgba(164, 164, 164, 0.5);
 }
 
 @media only screen and (max-width: 1024px) {
